Run AutoRefactor (all refactorings selected) on entire src. Contributes to #4.